# ember

./: .editorconfig  .gitignore  .mcp.json  BUILDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
Casks/: ember.rb
crates/ember-app/: Cargo.toml  build.rs
crates/ember-app/assets/: icon.icns
crates/ember-app/src/: config.rs  control.rs  main.rs  mcp.rs  menu.rs  screenshot.rs  window_state.rs
crates/ember-app/tests/: smoke.rs
crates/ember-core/: Cargo.toml
crates/ember-core/benches/: latency.rs
crates/ember-core/src/: app.rs  backend.rs  command.rs  config.rs  focus.rs  geom.rs  grid.rs  ids.rs  layout.rs  lib.rs  links.rs  settings.rs  windows.rs
crates/ember-platform/: Cargo.toml
crates/ember-platform/src/: lib.rs  menu.rs
crates/ember-render/: Cargo.toml
crates/ember-render/examples/: shape_bench.rs  spark_dist.rs  spark_perf.rs  sprite_smoke.rs
crates/ember-render/src/: background.rs  boxdraw.rs  boxpaint.rs  canvas.rs  coal.rs  grid_model.rs  headless.rs  lib.rs  paint.rs  quads.rs  renderer.rs  selection.rs  sprite.rs  wisp.rs
crates/ember-session/: Cargo.toml
crates/ember-session/benches/: throughput.rs
crates/ember-session/src/: lib.rs  local_pty.rs  osc133.rs  osc1337.rs  palette.rs  projection.rs  shell_integration.rs
crates/vt-app/: Cargo.toml
crates/vt-app/src/: main.rs
crates/vt-core/: Cargo.toml
crates/vt-core/benches/: latency.rs
crates/vt-core/src/: lib.rs
crates/vt-platform/: Cargo.toml
crates/vt-platform/src/: lib.rs
crates/vt-render/: Cargo.toml
crates/vt-render/src/: lib.rs
crates/vt-session/: Cargo.toml
crates/vt-session/src/: lib.rs
docs/design/: 2026-06-27-ember-design.md  2026-07-02-layout-seam.md  2026-07-04-settings-reorg-design.md  2026-07-05-clickable-urls-design.md  2026-07-06-multi-window-design.md  2026-07-07-surface-drag-wisp-design.md
extra/linux/: README.md  ember-term.desktop
scripts/: box-drawing-visual-test.sh  bundle-macos.sh  package-macos.sh  release-macos.sh
scripts/bench/: README.md  gpu-idle.sh  idle-cpu.sh  throughput-windowed.sh  throughput.sh
scripts/docs-screenshots/: README.md  demo-env.sh  shots.sh
scripts/release/: bottle-build.sh  pour-verify.sh
scripts/smoke/: window-smoke.sh  x11-container-smoke.sh
