[workspace]
resolver = "2"
members = [
    "crates/vt-core",
    "crates/vt-session",
    "crates/vt-render",
    "crates/vt-platform",
    "crates/vt-app",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["The Ember authors"]

[workspace.dependencies]
vt-core = { path = "crates/vt-core" }
vt-session = { path = "crates/vt-session" }
vt-render = { path = "crates/vt-render" }
vt-platform = { path = "crates/vt-platform" }
# VT engine — pinned centrally for API-churn stability (design §2/§3).
# Not consumed yet; wired into vt-session in Epic B.
alacritty_terminal = "=0.26.0"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
