[workspace]
resolver = "2"
members = [
    "crates/ember-core",
    "crates/ember-session",
    "crates/ember-render",
    "crates/ember-platform",
    "crates/ember-app",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["The Ember authors"]

[workspace.dependencies]
ember-core = { path = "crates/ember-core" }
ember-session = { path = "crates/ember-session" }
ember-render = { path = "crates/ember-render" }
ember-platform = { path = "crates/ember-platform" }
# VT engine — pinned centrally for API-churn stability (design §2/§3).
# Not consumed yet; wired into ember-session in Epic B.
alacritty_terminal = "=0.26.0"
serde = { version = "1", features = ["derive"] }
bitflags = { version = "2", features = ["serde"] }
portable-pty = "0.9"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
