[package]
name = "ember-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "ember-term"
path = "src/main.rs"

[dependencies]
ember-core.workspace = true
ember-session.workspace = true
ember-render.workspace = true
ember-platform.workspace = true
winit.workspace = true
serde_json.workspace = true

# Native menu bar — macOS only (avoids muda's GTK backend on Linux CI).
[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.19.3"

[lints]
workspace = true
