[package]
name = "ember-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "ember-term"
path = "src/main.rs"

[dependencies]
ember-core.workspace = true
ember-session.workspace = true
ember-render.workspace = true
ember-platform.workspace = true
winit.workspace = true
serde_json.workspace = true
toml.workspace = true
# The EMBER_FONT_DEBUG logger: surfaces cosmic-text's internal font
# diagnostics (see FontDebugLogger in main.rs).
log = "0.4"

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[lints]
workspace = true
