[package]
name = "ember-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
bitflags = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
criterion = "0.5"
serde_json = "1"

[[bench]]
name = "latency"
harness = false
