[package]
name = "ember-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ember-core.workspace = true
winit.workspace = true
png = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }

[lints]
workspace = true
