[package]
name = "ember-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ember-core.workspace = true
winit.workspace = true
png = "0.17"
arboard.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSProcessInfo"] }
muda = "0.19.3"

[lints]
workspace = true
