[package]
name = "ember-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ember-core.workspace = true
wgpu.workspace = true
glyphon.workspace = true
winit.workspace = true
pollster.workspace = true
bytemuck.workspace = true
png.workspace = true

[lints]
workspace = true
