[package]
name = "ember-session"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ember-core.workspace = true
alacritty_terminal.workspace = true
arboard.workspace = true
portable-pty.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "throughput"
harness = false

[lints]
workspace = true
